FastDoubleParserFromCharArray and FastDoubleParserFromByteArray now use the incubating Java vector API. With help of the vector API, the FastDoubleParserFromCharArray class is now almost as fast as FastDoubleParserFromByteArray.